--- a/src/app/common/components/dropdown-selector/dropdown-selector.component.scss
+++ b/src/app/common/components/dropdown-selector/dropdown-selector.component.scss
@@ -2,9 +2,11 @@ $rounded-top: 3px 3px 0 0;
 $rounded-bottom: 0 0 3px 3px;
 
 m-dropdownSelector {
+  // new stacking context
   position: relative;
+  z-index: 1;
+
   margin: 0 24px 36px 0;
-  z-index: 2;
   display: block;
 }
 .m-dropdownSelector__labelWrapper {
