--- a/src/app/common/components/forms/country-input-v2/country-input-v2.component.scss
+++ b/src/app/common/components/forms/country-input-v2/country-input-v2.component.scss
@@ -1,5 +1,8 @@
 m-countryInput {
+  // new stacking context
   position: relative;
+  z-index: 0;
+
   display: inline-flex;
   margin-bottom: $minds-padding;
   flex-grow: 1;
