--- a/src/app/common/components/stackable-modal/stackable-modal.component.scss
+++ b/src/app/common/components/stackable-modal/stackable-modal.component.scss
@@ -1,5 +1,5 @@
 m-stackableModal {
-  m-overlay-modal {
-    z-index: 10000000 !important;
-  }
+  display: block;
+  position: relative;
+  @include z-index(modal--stackable);
 }
