--- a/src/app/modules/analytics/components/chart-v2/chart-v2.component.scss
+++ b/src/app/modules/analytics/components/chart-v2/chart-v2.component.scss
@@ -1,6 +1,9 @@
 m-chartV2 {
-  display: block;
+  // new stacking context
   position: relative;
+  z-index: 0;
+
+  display: block;
 }
 .js-plotly-plot,
 .plot-container {
@@ -33,7 +36,8 @@ m-chartV2 {
   pointer-events: none;
   border-radius: 3px;
   font-size: 12px;
-  z-index: 9999999999;
+  z-index: 2;
+
   opacity: 0;
   transition: opacity 0.2s ease-in;
   @include m-theme() {
