--- a/src/app/modules/newsfeed/activity/modal/title-overlay/title-overlay.component.ng.scss
+++ b/src/app/modules/newsfeed/activity/modal/title-overlay/title-overlay.component.ng.scss
@@ -129,11 +129,11 @@
     }
   }
 
-  .minds-avatar-hovercard {
-    z-index: 9999999 !important;
-  }
-
   ::ng-deep {
+    m-hovercard-popup div.minds-avatar-hovercard {
+      @include z-index(popover--modal);
+    }
+
     m-paywallBadge {
       position: absolute;
       right: 43px;
