--- a/src/app/common/layout/topbar/topbar.component.scss
+++ b/src/app/common/layout/topbar/topbar.component.scss
@@ -7,6 +7,7 @@ $layout-sidebar-width: 80px;
   display: none;
 }
 m-topbar {
+  @include z-index(topbar);
   position: fixed;
   top: 0;
   left: 0;
@@ -25,7 +26,6 @@ m-topbar {
   border: none;
   min-height: $layout-header-height;
   max-height: 1000px;
-  z-index: 9999;
 
   transform: translateZ(0);
 
