--- a/src/app/modules/blockchain/transaction-overlay/transaction-overlay.component.scss
+++ b/src/app/modules/blockchain/transaction-overlay/transaction-overlay.component.scss
@@ -2,12 +2,12 @@ m--blockchain--transaction-overlay {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999999;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  @include z-index(modal);
 
   user-select: none;
   @include m-theme() {
