--- a/src/app/modules/blogs/v2/edit/editor-base.component.ng.scss
+++ b/src/app/modules/blogs/v2/edit/editor-base.component.ng.scss
@@ -8,7 +8,9 @@
     }
 
     .m-blogEditor__bannerImageContainer {
+      // new stacking context
       position: relative;
+      z-index: 0;
 
       img {
         width: 100%;
