--- a/src/app/modules/composer/components/popup/popup.component.scss
+++ b/src/app/modules/composer/components/popup/popup.component.scss
@@ -2,7 +2,7 @@ m-composer__popup {
   display: block;
   position: absolute;
   border-radius: 5px;
-  z-index: 99999999;
+  z-index: 1;
 
   &.m-composer__popup--open {
     display: block;
