--- a/src/app/modules/composer/composer.component.scss
+++ b/src/app/modules/composer/composer.component.scss
@@ -1,5 +1,8 @@
 m-composer {
+  // new stacking context
   position: relative;
+  z-index: 0;
+
   display: block;
   margin-bottom: 16px;
   // padding: 29px 0 34px;
@@ -37,6 +40,6 @@ m-composer {
     right: 0;
     left: 0;
     bottom: 0;
-    z-index: 10;
+    z-index: 1;
   }
 }
