--- a/src/app/modules/media/modal/modal.component.scss
+++ b/src/app/modules/media/modal/modal.component.scss
@@ -1,7 +1,7 @@
 body.m-overlay-modal--shown {
   m-overlay-modal {
     position: fixed;
-    z-index: 9999990;
+    // z-index: 9999990;
   }
 }
 
@@ -16,7 +16,7 @@ m-overlay-modal {
   overflow: scroll;
 
   .m-overlay-modal--backdrop {
-    z-index: 9999995;
+    // z-index: 9999995;
     @include m-theme() {
       background-color: rgba(themed($m-black-always), 0.8);
     }
@@ -32,7 +32,7 @@ m-overlay-modal {
     width: 100%;
 
     .m-overlay-modal--close {
-      z-index: 9999998;
+      // z-index: 9999998;
       line-height: normal;
       opacity: 0.6;
       position: fixed;
@@ -67,7 +67,7 @@ m-overlay-modal {
 
         .m-mediaModal__theater {
           position: relative;
-          z-index: 9999996;
+          // z-index: 9999996;
           @include m-theme() {
             box-shadow: 0 12px 24px rgba(themed($m-black-always), 0.3);
           }
@@ -93,7 +93,7 @@ m-overlay-modal {
   min-height: 480px;
   position: relative;
   text-align: center;
-  z-index: 9999997;
+  // z-index: 9999997;
   @include m-theme() {
     background-color: rgba(themed($m-black-always), 0.9);
     box-shadow: 0 0 8px rgba(themed($m-black-always), 0.15);
@@ -702,10 +702,6 @@ m-media--modal {
       }
     }
   }
-}
-
-.minds-avatar-hovercard {
-  z-index: 9999999 !important;
 }
 
 .m-mediaModal__clearFix:after {
