--- a/src/app/modules/settings-v2/pro/assets/assets.component.scss
+++ b/src/app/modules/settings-v2/pro/assets/assets.component.scss
@@ -1,6 +1,9 @@
 m-settingsV2Pro__assets {
   [class*='m-form__filePreview'] {
-    position: relative;
+    // new stacking context
+    position: static;
+    z-index: 0;
+
     overflow: hidden;
     display: inline-block;
     border-radius: 2px;
@@ -17,7 +20,7 @@ m-settingsV2Pro__assets {
       left: 0;
       width: 100%;
       height: 100%;
-      z-index: 5;
+      z-index: 1;
       display: flex;
       align-items: center;
       justify-content: center;
