Prevent editing of upload media after initial post #1716

--- a/src/app/modules/composer/components/preview/preview.component.html
+++ b/src/app/modules/composer/components/preview/preview.component.html
@@ -12,7 +12,7 @@
   >
     <div
       class="m-composerPreview__close"
-      [hidden]="isPosting$ | async"
+      [hidden]="(isPosting$ | async) || (isEditing$ | async)"
       (click)="removeAttachment()"
     >
       <m-icon iconId="close"></m-icon>
