Added push_pin for pinned, removed background color from label, added margin

--- a/src/app/modules/composer/components/title-bar/dropdown/dropdown.component.html
+++ b/src/app/modules/composer/components/title-bar/dropdown/dropdown.component.html
@@ -35,7 +35,18 @@
         <m-icon iconId="chevron_right"></m-icon>
       </m-dropdownMenu>
     </li>
-
+    <li>
+      <m-dropdownMenu
+        [menu]="permawebMenu"
+        [anchorPosition]="{ top: '0', right: 'calc(100% - 4px)' }"
+        triggerClass="m-dropdownMenu__item"
+        data-cy="meatball-menu-permaweb"
+        *ngIf="shouldShowPermawebOption()"
+      >
+        <span>Permaweb</span>
+        <m-icon iconId="chevron_right"></m-icon>
+      </m-dropdownMenu>
+    </li>
     <ng-content></ng-content>
   </ul>
 </ng-template>
@@ -69,6 +80,17 @@
           iconId="check"
           *ngIf="(license$ | async) === licenseItem.value"
         ></m-icon>
+      </span>
+    </li>
+  </ul>
+</ng-template>
+
+<ng-template #permawebMenu>
+  <ul data-cy="meatball-menu-license-menu">
+    <li (click)="onPostToPermawebClick()">
+      <span class="m-dropdownMenu__item">
+        <span>Post to Permaweb</span>
+        <m-icon iconId="check" *ngIf="service.postToPermaweb$ | async"></m-icon>
       </span>
     </li>
   </ul>
