(fix): not able to post to plus feed if you are plus

--- a/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.html
@@ -79,7 +79,7 @@
   </p>
 
   <m-shadowboxSubmitButton
-    *ngIf="isPro"
+    *ngIf="isPlus"
     type="button"
     (click)="save()"
     [disabled]="!canSave"
