--- a/src/app/modules/wallet/v2/cash/cash.component.html
+++ b/src/app/modules/wallet/v2/cash/cash.component.html
@@ -10,6 +10,7 @@
       routerLink="earnings"
       routerLinkActive="selected"
       i18n="@@WALLET__V2__TABS__PRO__EARNIGNS"
+      data-cy="data-minds-wallet-earnings"
     >
       Earnings
     </a>
@@ -19,6 +20,7 @@
       routerLink="transactions"
       routerLinkActive="selected"
       i18n="@@WALLET__V2__TABS__TRANSACTIONS"
+      data-cy="data-minds-wallet-transactions"
     >
       Transactions
     </a>
@@ -28,6 +30,7 @@
       routerLink="settings"
       routerLinkActive="selected"
       i18n="@@WALLET__V2__TABS__SETTINGS"
+      data-cy="data-minds-wallet-settings"
     >
       Settings
     </a>
