(feat) Adaptation of web3modal for angular [WIP]

--- a/src/app/modules/layout/page/page.component.html
+++ b/src/app/modules/layout/page/page.component.html
@@ -50,6 +50,7 @@
 <m--blockchain--transaction-overlay></m--blockchain--transaction-overlay>
 
 <m-modal--tos-updated *ngIf="session.isLoggedIn()"></m-modal--tos-updated>
+<m-web3-modal></m-web3-modal>
 
 <ng-container *mIfBrowser>
   <m-juryDutySession__summons
